update: controller tests